agregando lo pesado